# MrWriter

./: .MrWriter.pro.swp  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Info.plist  MrWriter.desktop  MrWriter.icns  MrWriter.pro  README.adoc  README.md  _config.yml  abstracttextbox.cpp  abstracttextbox.h  appveyor.yml  bundle.cmake  check_releases.sh  coding_guidelines.cpp  colorbutton.cpp  colorbutton.h  commands.cpp  commands.h  conanfile.txt  curve.cpp  curve.h  deploy.sh  document.clang.cpp  document.cpp  document.h  index.html  index.md  main.cpp  mainwindow.cpp  mainwindow.h  make_doc.sh  markdownbox.cpp  markdownbox.h  markdownselection.cpp  markdownselection.h  (+32 more)
.travis/: install.sh  run.sh
MrWriter_artwork/: blackIcon.ai  blueIcon.ai  circleIcon.ai  copyIcon.ai  cutIcon.ai  dashDotPatternIcon.ai  dashPatternIcon.ai  dotPatternIcon.ai  eraserIcon.ai  finePenWidthIcon.ai  fullscreenIcon.ai  grayIcon.ai  greenIcon.ai  handIcon.ai  lightblueIcon.ai  lightgreenIcon.ai  magentaIcon.ai  mediumPenWidthIcon.ai  newIcon.ai  openIcon.ai  orangeIcon.ai  pageDownIcon.ai  pageDownPlusIcon.ai  pageFirstIcon.ai  pageLastIcon.ai  pageUpIcon.ai  pasteIcon.ai  penIcon.ai  redIcon.ai  redoIcon.ai  rulerIcon.ai  saveIcon.ai  savePDFIcon.ai  selectIcon.ai  solidPatternIcon.ai  thickPenWidthIcon.ai  undoIcon.ai  veryFinePenWidthIcon.ai  veryThickPenWidthIcon.ai  whiteIcon.ai  (+5 more)
MrWriter_artwork_Inkscape/: CreateICNS.src
MrWriter_artwork_Inkscape/Icons/: ai2svg.sh  svg2png.sh
Readme/: MrWriter.moj
_layouts/: index.html
appdir/usr/share/applications/: MrWriter.desktop
documentation/: MrDoc.aux  MrDoc.tex  MrWriterDoc.adoc  MrWriterDoc.html  MrWriterDoc.qch  MrWriterDoc.qhq  Release_Howto.adoc  collection.qhc  collection.qhcp  line-based-file-format.adoc  makeHelp.sh  pen_button_menu.moj
documentation/asciidoc/: article.html  article.txt  make.sh
src/: commands.cpp  commands.h  document.clang.cpp  document.cpp  document.h  element.cpp  element.h  image.cpp  image.h  keypresseater.cpp  keypresseater.h  main.cpp  mainwindow.cpp  mainwindow.h  mrdoc.cpp  mrdoc.h  page.cpp  page.h  qcompressor.h  quickmenu.cpp  quickmenu.h  quickmenu.ui  selection.cpp  selection.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  stroke.cpp  stroke.h  tabletapplication.cpp  text.cpp  text.h  tools.cpp  tools.h  version.h  widget.cpp  widget.h
test_document/: Testdoc.nogit.moj  generate_test_document.sh
test_document/parts/: footer.part.moj  header.part.moj  page.part.moj  page_all_colors.part.moj  page_with_images.part.moj
travis/: build_on_xenial_docker.sh  install_linux.sh  install_osx.sh  script_linux.sh  script_osx.sh  script_windows.bat  script_windows.sh
website/: MrWriterDoc.adoc  _config.yml  about.adoc  downloads.adoc  index.adoc  screenshots.md
website/_includes/: footer.html  header.html
website/_posts/: 2016-01-24-welcome-to-jekyll.markdown
website/_sass/: _base.scss
website/other/: MrWriterDoc.html
